--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,54 @@
-name: Angular_DockerImage
+name: Angular Docker Image
+
 on:
-push:
-branches: [ master ]
-pull_request:
-branches: [ master ]
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+
 jobs:
-angular_deploy :
-runs-on: ubuntu-latest
-steps:
-- uses: actions/checkout@v2
-- name: Use Node.js 16.x
-uses: actions/setup-node@v1
-with:
-node-version: 20.x
-- name: npm install
-run: npm ci
-- name: test
-run: |
-npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
-- name: build
-run: |
-npm run build --output-path=docs
-- name: docker login
-env:
-DOCKER_USER: ${{secrets.DOCKER_USER}}
-DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-run: |
-docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-- name: Download and run the Docker base image
-run: docker run -d --name http_base httpd
-- name: copy model to the Docker image
-run: docker cp docs/. http_base:/usr/local/apache2/htdocs
-- name: Build the custom Docker image
-run: docker commit --change "ENV MODEL_NAME http_base" http_base
-${{secrets.DOCKER_USER}}/mycv:${{ github.sha }}
-- name: Docker Push
-run: docker push ${{secrets.DOCKER_USER}}/mycv:${{ github.sha }}
+  angular_deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '16.x'
+
+      - name: npm install
+        run: npm ci
+
+      - name: Run tests
+        run: npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+
+      - name: Build Angular app
+        run: npm run build -- --output-path=docs
+
+      - name: Docker login
+        env:
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
+
+      - name: Download and run the Docker base image
+        run: docker run -d --name http_base httpd:2.4
+
+      - name: Copy docs into container
+        run: docker cp docs/. http_base:/usr/local/apache2/htdocs
+
+      - name: Build custom Docker image
+        run: |
+          docker commit \
+            --change "ENV MODEL_NAME http_base" \
+            http_base \
+            ${{ secrets.DOCKER_USER }}/mycv:${{ github.sha }}
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_USER }}/mycv:${{ github.sha }}
