--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
-name: Angular Docker Image_v2
+# .github/workflows/main.yml
+name: Angular Docker Image
 
 on:
   push:
@@ -13,42 +14,51 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1) Checkout code
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # 2) Setup Node.js 20.x and cache npm
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+          cache: 'npm'
 
-      - name: npm install
+      # 3) Install dependencies
+      - name: Install npm dependencies
         run: npm ci
 
-      - name: Run tests
+      # 4) Run tests
+      - name: Run unit tests
         run: npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
 
+      # 5) Build Angular app into /docs
       - name: Build Angular app
         run: npm run build -- --output-path=docs
 
+      # 6) Log in to Docker Hub
       - name: Docker login
-        env:
-          DOCKER_USER: ${{ secrets.DOCKER_USER }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # 7) Pull and start the HTTPD base image
       - name: Download and run the Docker base image
-        run: docker run -d --name http_base httpd:2.4
+        run: docker run -d --name http_base httpd:2.4-alpine
 
+      # 8) Copy build output into the container
       - name: Copy docs into container
         run: docker cp docs/. http_base:/usr/local/apache2/htdocs
 
+      # 9) Commit container as a new image tagged :latest
       - name: Build custom Docker image
         run: |
           docker commit \
-            --change "ENV MODEL_NAME http_base" \
             http_base \
-            ${{ secrets.DOCKER_USER }}/mycv:${{ github.sha }}
+            ${{ secrets.DOCKER_USER }}/mycv:latest
 
+      # 10) Push your custom image to Docker Hub
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USER }}/mycv:${{ github.sha }}
+        run: docker push ${{ secrets.DOCKER_USER }}/mycv:latest
